# prototype

./: .firebaserc  .gitignore  README.md  docker-compose.yml  package.json  tsconfig.json
api/: .env  Cargo.toml  Dockerfile  README.md  deploy.sh
api-go/: .air.toml  Dockerfile.local  go.mod  main.go
api-go/cmd/migrate/: main.go
api-go/pkg/base/: index.go
api/migrations/2022-02-05-012024_create_posts/: up.sql
api/src/: lib.rs  main.rs  models.rs
functions_/: index.js  package.json
public/: index.html
src/: index.css  index.tsx
src/common/: articles.tsx  classes.tsx  functions.tsx
src/components/: App.tsx  constraints.tsx
src/components/atoms/: Pre.tsx
src/components/atoms/blockquote/: index.tsx
src/components/atoms/code-block/: index.tsx
src/components/atoms/dayjs-date-time-picker/: index.tsx
src/components/atoms/divider/: index.tsx
src/components/atoms/gist/: index.tsx
src/components/atoms/global-link/: index.tsx
src/components/atoms/image/: index.tsx
src/components/atoms/latex/: index.tsx
src/components/atoms/local-link/: index.tsx
src/components/atoms/number-text-field/: index.tsx
src/components/atoms/p/: index.tsx
src/components/atoms/q/: index.tsx
src/components/molecules/article/: index.tsx
src/components/molecules/article-content/: index.tsx
src/components/organisms/article/: index.tsx
src/components/organisms/color-picker/: components.tsx  index.tsx
src/components/organisms/othello/: ai.tsx  (+7 more)
src/components/pages/: Depression.tsx  Test.tsx
src/components/templates/: Provider.tsx
src/types/: index.d.ts
(+125 files in other folders)
